k8sprjs/traefik-dashboard/resources/traefik.homelab.cloud-basicauth.middleware.traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: traefik-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-auth-secret
