k8sprjs/traefik-dashboard/resources/traefik-dashboard.ingressroute.traefik.yaml
# Ingress for Traefik's dashboard
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`10.7.0.1`) || Host(`traefik.homelab.cloud`) || Host(`tfk.homelab.cloud`)
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-dashboard-basicauth
